--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
 title: Taeguk.co.uk
 email: dave@taeguk.co.uk
-description: > # this means to ignore newlines until "baseurl:"
-Dave Shaw's Development Blog
-baseurl: "/blog/" # the subpath of your site, e.g. /blog/
-url: "http://xdaDaveShaw.github.io" # the base hostname & protocol for your site
+description: Dave Shaw's Development Blog
+baseurl: /blog/
+url: http://xdaDaveShaw.github.io
 twitter_username: xdaDaveShaw
 github_username:  xdaDaveShaw
 
