Remove baseurl from config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Taeguk.co.uk
 email: dave@taeguk.co.uk
 description: Dave Shaw's Development Blog
-baseurl: /blog
+baseurl: ""
 url: http://xdaDaveShaw.github.io
 twitter_username: xdaDaveShaw
 github_username:  xdaDaveShaw
