--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ stackoverflow_link: users/383710/daveshaw
 
 # Build settings
 markdown: kramdown
-contenturl: "/content/"
+contenturl: "/Content/"
