Moving under \blog

--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,5 @@ stackoverflow_link: users/383710/daveshaw
 
 # Build settings
 markdown: kramdown
-contenturl: "/content/"
+contenturl: "blog/Content/"
+permalink: "title"
