Attempting to get the posts into \blog

--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,5 @@ stackoverflow_link: users/383710/daveshaw
 
 # Build settings
 markdown: kramdown
-contenturl: "blog/Content/"
-permalink: :title
+contenturl: "/blog/Content/"
+permalink: /:title
