Another attempt at \blog

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,6 @@
 title: Taeguk.co.uk
 email: dave@taeguk.co.uk
 description: Dave Shaw's Development Blog
-baseurl: ""
 url: http://xdaDaveShaw.github.io
 twitter_username: xdaDaveShaw
 github_username:  xdaDaveShaw
@@ -10,5 +9,6 @@ stackoverflow_link: users/383710/daveshaw
 
 # Build settings
 markdown: kramdown
+permalink: /:title/
 contenturl: "/blog/Content/"
-permalink: /:title
+
