Moving to taeguk.co.uk

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Taeguk.co.uk
 email: dave@taeguk.co.uk
 description: Dave Shaw's Development Blog
-url: http://xdaDaveShaw.github.io
+url: http://taeguk.co.uk
 twitter_username: xdaDaveShaw
 github_username:  xdaDaveShaw
 stackoverflow_link: users/383710/daveshaw
