Adding a meta description with more length to the site.

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Taeguk.co.uk
 email: dave@taeguk.co.uk
 description: Dave Shaw's Development Blog
+meta_description: Dave Shaw's Development Blog. I'm a full-time software developer, blogging about Development, VSTS/TFS, F#, C#, .NET, and other Microsoft technologies.
 url: https://taeguk.co.uk
 enforce_ssl: taeguk.co.uk 
 twitter_username: xdaDaveShaw
