--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,7 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"ban.spellright"
+		"swyphcosmo.spellchecker"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
