Abusing Dependabot Post

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,14 @@
 	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "sh .devcontainer/post-create.sh"
+	"postCreateCommand": "sh .devcontainer/post-create.sh",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"fcrespo82.markdown-table-formatter"
+			]
+		}
+	}
 
 	// Configure tool-specific properties.
 	// "customizations": {},
